--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -6,10 +6,11 @@
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
-        android:theme="@style/AppTheme" >
+        android:theme="@android:style/Theme.NoTitleBar" >
         <activity
             android:name=".Main"
-            android:label="@string/app_name" >
+            android:label="@string/app_name"
+            >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -19,7 +20,8 @@
         <activity
             android:name=".Solitaire"
             android:label="@string/title_activity_solitaire"
-            android:parentActivityName="com.example.kaleb_000.dartdojo.Main" >
+            android:parentActivityName="com.example.kaleb_000.dartdojo.Main"
+            android:theme="@android:style/Theme.NoTitleBar" >
     </activity>
     </application>
 
